# nano_study_link

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  blah.cpp  nanobind_imgui.cpp  nanobind_imgui_joined.cpp  nanobind_imgui_master.cpp  nanobind_imgui_part1.cpp  nanobind_imgui_part2.cpp  nanobind_imgui_part2_orig.cpp  nanobind_imgui_part3.cpp  nanobind_imgui_part4.cpp  pybind11_imgui.cpp  pyproject.toml
.github/workflows/: pip_linux_pybind.yml  pip_win_nano_full.yml  pip_win_nano_full_od.yml  pip_win_nano_joined.yml  pip_win_nano_optim_size.yml  pip_win_nano_part1_od.yml  pip_win_nano_part2.yml  pip_win_nano_part2_od.yml  pip_win_nano_part3.yml  pip_win_nano_part4.yml  pip_win_nano_parts_od.yml  pip_win_pybind.yml
.github/workflows/disabled_parts/: pip_win_nano_part1.yml  pip_win_nano_parts.yml
.github/workflows/disabled_workflows/: pip_nixes_nano.yml  pip_nixes_nano_o3.yml  pip_nixes_pybind.yml  pip_win_nano_optim.yml  pip_win_nano_optim_disabled.yml  pip_win_nano_optim_o1.yml  pip_win_nano_optim_o2.yml
imgui/: imgui.h
