[build-system]
requires = ["scikit-build-core>=0.9.1"]
build-backend = "scikit_build_core.build"

[project]
name = "nano-study-link"
version = "0.0.1"
authors = [ { name = "Pascal Thomet", email = "pthomet@gmail.com" } ]
requires-python = ">=3.10"
dependencies = []

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["bindings/imgui_bundle"]
cmake.version = ">=3.26.1"
# cmake.verbose = true
# logging.level = "INFO"
